<resources>
    <string name="app_name">BOLVENTUR</string>

    <!-- Login -->
    <string name="username">Username...</string>
    <string name="email">E-mail...</string>
    <string name="password">Password...</string>
    <string name="confPassword">Confirm password...</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>

    <!-- Error -->
    <string name="error_login">User not found</string>
    <string name="error_empty_login_values">Enter email and password</string>
    <string name="error_empty_email_value">Enter email</string>
    <string name="error_empty_password_value">Enter password</string>
    <string name="error_invalid_email">Enter a valid email</string>
    <string name="error_do_not_match">Passwords do not match</string>
    <string name="error_empty_register_values">Please fill in all the fields</string>
    <string name="error_unknown">Unknown error</string>

    <!-- Menu buttons -->
    <string name="botton1">Cultural Events</string>
    <string name="botton2">Musical Events</string>
    <string name="botton3">Tourism</string>
    <string name="botton4">Favorites</string>

    <string name="tab_text_1">Cultural Events</string>
    <string name="tab_text_2">Musical Events</string>
    <string name="tab_text_3">Tourism</string>
    <string name="tab_text_4">Favorites</string>

    <string name="title_activity_main_menu_taab">MainMenuTaabActivity</string>

    <string name="title_activity_main_menu_tab">MainMenuTabActivity</string>

    <!-- Register -->
    <string name="success_message">Successfully registered</string>
    <string name="error_register">Error register User</string>
    <string name="error_register_email_already_exist">Email is already registered</string>
    <string name="error_register_weak_password">Password is weak, at least 6 characteres</string>

    <!-- Register Events-->
    <string name="btnCreate">Create</string>
    <string name="btnCancel">Cancel</string>
    <string name="NameOfEventHintText">Name of event</string>
    <string name="dateAndScheduleHintText">Date and Schedule</string>
    <string name="locationHintText">Location</string>
    <string name="priceHintText">Price</string>
    <string name="descriptionHintText">Description</string>
    <string name="btnPhoto">Pick an Image</string>
    <string name="post_image">Pick image</string>

    <string name="placeTextView">Place</string>
    <string name="addEvent">Add Event</string>
    <string name="back">Back</string>
</resources>