<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".ui.activities.AddEventActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src="@drawable/bolventur"
        android:adjustViewBounds="true"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eventTitleTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameOfEventTextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_md"
        android:hint="@string/NameOfEventHintText" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/dateAndScheduleTextInputEditText"
        android:layout_marginTop="@dimen/space_md"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_md"
        android:hint="@string/dateAndScheduleHintText" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/locationTextInputEditText"
        android:layout_marginTop="@dimen/space_md"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_md"
        android:hint="@string/locationHintText" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/priceTextInputEditText"
        android:layout_marginTop="@dimen/space_md"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_md"
        android:hint="@string/priceHintText" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/descriptionTextInputEditText"
        android:layout_marginTop="@dimen/space_md"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_md"
        android:hint="@string/descriptionHintText"
        android:inputType="textMultiLine"
        android:lines="3"/>

    <Button
        android:id="@+id/btnPhoto"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/space_sm"
        android:layout_marginHorizontal="100dp"
        android:text="@string/btnPhoto"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/space_sm"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnCancel" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btnCreate" />
    </LinearLayout>



</LinearLayout>