<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".ui.activities.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bolventur"
        android:adjustViewBounds="true"
        android:layout_marginTop="@dimen/space_lg"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginTop="@dimen/space_md"
        android:layout_marginHorizontal="@dimen/space_md"
        android:inputType="textEmailAddress|textNoSuggestions"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="@dimen/space_xs"
        android:layout_marginHorizontal="@dimen/space_md"
        android:inputType="textPassword|textNoSuggestions"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="@dimen/space_xs"
        android:layout_marginHorizontal="@dimen/space_md"
        android:inputType="textEmailAddress|textNoSuggestions"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/confPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confPassword"
        android:layout_marginTop="@dimen/space_xs"
        android:layout_marginHorizontal="@dimen/space_md"
        android:inputType="textPassword|textNoSuggestions"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:paddingRight="@dimen/space_md"
        android:paddingLeft="@dimen/space_md"
        android:layout_marginTop="@dimen/space_lg"
        android:background="@drawable/style_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/signUp"
        android:onClick="register"/>

</LinearLayout>